--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Vatyx/skinsense#readme",
   "dependencies": {
-    "bluetooth-serial-port": "^1.3.1"
+    "bluetooth-serial-port": "^1.3.1",
+    "robotjs": "^0.4.4"
   }
 }
