--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Vatyx/skinsense#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "bluetooth-serial-port": "^1.3.1",
-    "robotjs": "^0.4.4"
+    "robotjs": "^0.4.4",
+    "serialport": "^4.0.1"
   }
 }
